packages/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atb-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: atb-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: atb-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: atb-monitoring
